base/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grwthy-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - grwthy.com
      secretName: grwthy-tls
  rules:
    - host: grwthy.com
      http:
        paths:
          - path: /v1
            pathType: Prefix
            backend:
              service:
                name: grwthy-api
                port:
                  number: 80
          - path: /webhook
            pathType: Prefix
            backend:
              service:
                name: grwthy-api
                port:
                  number: 80
          - path: /socket.io
            pathType: Prefix
            backend:
              service:
                name: grwthy-api
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grwthy-web
                port:
                  number: 80
